--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net461" />
   <package id="ModernUI.WPF" version="1.0.9" targetFramework="net452" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="Treehopper" version="1.11.3" targetFramework="net461" />
+  <package id="Treehopper.Desktop" version="1.11.2" targetFramework="net461" />
+  <package id="Treehopper.Libraries" version="1.11.2" targetFramework="net461" />
 </packages>
