--- a/rom-flasher.csproj
+++ b/rom-flasher.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>rom_flasher</RootNamespace>
     <AssemblyName>rom-flasher</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,6 +38,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -44,6 +49,15 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="Treehopper, Version=1.11.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Treehopper.1.11.3\lib\netstandard2.0\Treehopper.dll</HintPath>
+    </Reference>
+    <Reference Include="Treehopper.Desktop, Version=1.11.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Treehopper.Desktop.1.11.2\lib\netstandard2.0\Treehopper.Desktop.dll</HintPath>
+    </Reference>
+    <Reference Include="Treehopper.Libraries, Version=1.11.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Treehopper.Libraries.1.11.2\lib\netstandard2.0\Treehopper.Libraries.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -69,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
